audio issue fixed

--- a/views/newroom.ejs
+++ b/views/newroom.ejs
@@ -17,8 +17,8 @@
     <div class = "mainsection">
           <div class = "videosection">
             
-            <div class = "activevideo">
-                <video id = "activevideo" autoplay></video>
+            <div class = "activevideo" autoplay muted playsinline>
+                <video id = "activevideo" autoplay muted playsinline></video>
             </div>
 
             <div class = "videolist" id = "videolist" >
